--- a/introduction.mdx
+++ b/introduction.mdx
@@ -5,7 +5,7 @@ description: "Welcome to your new Mintlify documentation. Get started making it 
 
 ## Setting up
 
-The first step to world-class docation is setting up your editing environnments.
+The first step tolass docation is setting up your editing environnments.
 
 <CardGroup cols={2}>
   <Card
